--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,12 @@
     "name": "ven7ura/laravel-html5-boilerplate",
     "type": "template",
     "description": "HTML5 Boilerplate template integrated to Laravel.",
-    "keywords": ["template", "html5", "boilerplate", "layout"],
+    "keywords": [
+        "template",
+        "html5",
+        "boilerplate",
+        "layout"
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -23,5 +28,4 @@
             ]
         }
     }
-
 }
